updated scroll bar style

--- a/fruit-search/starter_code/style.css
+++ b/fruit-search/starter_code/style.css
@@ -49,3 +49,11 @@ ul li {
 ul li:hover {
   background: rgb(218, 119, 27);
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(202, 101, 5);
+}
