--- a/flask-blogly/templates/user-info.html
+++ b/flask-blogly/templates/user-info.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ user.full_name }}{% endblock %}}
+{% block title %}{{ user.full_name }}{% endblock %}
 
 {% block content %}
 
@@ -29,6 +29,27 @@
     </form>
 
   </div>
+
+  <div class="col-sm-10 col-12">
+    <h1>Posts</h1>
+
+    <ul>
+      {% for post in posts %}
+      <li>
+        <a href="/posts/{{ post.id }}">{{ post.title }}</a>
+      </li>
+      {% endfor %}
+    </ul>
+    <form>
+      <button class="btn btn-primary btn-sm"
+              formaction="/users/{{ user.id }}/posts/new"
+              formmethod="GET">Add Post
+      </button>
+    </form>
+
+  </div>
+
+  
 </div>
 
 {% endblock %}
