--- a/flask-blogly/templates/posts/details.html
+++ b/flask-blogly/templates/posts/details.html
@@ -10,6 +10,16 @@
 
 <div class="row">
 
+    <div class="col-sm-2"><b>Tags:</b></div>
+
+    {% for tag in tags %}
+        <div class="col-sm-1"><i><b>{{ tag.name }}</b></i></div>
+    {% endfor %}
+        
+</div>
+
+<div class="row">
+
     <form>
         <button class="btn btn-default btn-sm"
                 formaction="/users/{{ post.user_id }}"
