--- a/capstone-project-1/application/templates/users/login.html
+++ b/capstone-project-1/application/templates/users/login.html
@@ -18,8 +18,10 @@
           {{ field(placeholder=field.label.text, class="form-control") }}
         {% endfor %}
 
-        <button class="btn btn-primary btn-block btn-lg">Log in</button>
+        <button class="btn btn-primary btn-block btn-md">Log in</button>
       </form>
+
+      <h5>Don't have an account? <a href="/signup">Sign up now!</a></h5>
     </div>
   </div>
 
