--- a/capstone-project-1/application/templates/recipes/detail.html
+++ b/capstone-project-1/application/templates/recipes/detail.html
@@ -2,8 +2,63 @@
 
 {% block content %}
 
-<p>{{ recipe_info["title"] }}</p>
-<p>Click <a href="{{ recipe_info['sourceUrl'] }}">here</a> for source.</p>
+<div class="card mb-3">
+    <div class="row g-4">
+      <div class="col-md-6">
+        <img src="{{ recipe_info['image'] }}" class="img-fluid rounded-start" alt="Recipe image" style="width: 100%;">
+      </div>
 
+      <div class="col-md-6">  
+        <div class="card-body">
+            <h2 class="card-title">{{ recipe_info["title"] }}</h2>
+            <p>Ready in: {{ recipe_info["readyInMinutes"] }} minutes</p>
+            <p>Servings: {{ recipe_info["servings"] }}</p>
+            {% if recipe_info['id'] not in api_ids %}
+            <form action="/users/save_recipe/{{ recipe_info['id'] }}/{{ recipe_info['title'] }}/{{ page }}" method="POST">
+                <button class="btn btn-lg btn-outline-primary">
+                    Save it!
+                </button>
+                <a href="{{ recipe_info['sourceUrl'] }}" target="_blank" rel="noopener noreferrer" class="btn btn-outline-secondary btn-lg">
+                    Go to source
+                </a>
+            </form>
+            {% else %}
+            <form action="/users/unsave_recipe/{{ recipe_info['id'] }}/{{ page }}" method="POST">
+                <button class="btn btn-lg btn-primary">
+                    Saved
+                </button>
+                <a href="{{ recipe_info['sourceUrl'] }}" target="_blank" rel="noopener noreferrer" class="btn btn-outline-secondary btn-lg">
+                    Go to source
+                </a>
+            </form>
+            {% endif %}
+            
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+<div class="card mb-3">
+    <div class="row">
+        <div class="col-md-6">
+            <h4>You may like these similar recipes!</h4>
+            <ul>
+                {% for recipe in similar_recipes %}
+                    <li><a href="/recipes/{{ recipe['api_id'] }}">{{ recipe['title'] }}"></a></li>
+                {% endfor %}
+            </ul>
+        </div>
+        <div class="col-md-6">
+            <h4>Ingredients</h4>
+            <ul>
+                {% for ingredient in recipe_info["extendedIngredients"] %}
+                    <li>{{ ingredient["original"] }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
