--- a/capstone-project-1/application/templates/users/update.html
+++ b/capstone-project-1/application/templates/users/update.html
@@ -4,7 +4,7 @@
 
 <div class="row justify-content-md-center">
     <div class="col-md-7 col-lg-5">
-      <h2 class="join-message">Save your recipes today.</h2>
+      <h2 class="join-message">Update profile</h2>
       <form method="POST" id="user_form">
         {{ form.hidden_tag() }}
   
@@ -16,10 +16,9 @@
           {{ field(placeholder=field.label.text, class="form-control") }}
         {% endfor %}
   
-        <button class="btn btn-primary btn-md btn-block">Sign me up!</button>
+        <a href="/users/{{ user.id }}" class="btn btn-outline-info btn-lg">Cancel</a>
+        <button class="btn btn-primary btn-lg btn-block">Update!</button>
       </form>
-
-      <h5>Already have an account? <a href="/login">Log in!</a></h5>
     </div>
   </div>
 
