--- a/capstone-project-1/application/templates/recipes/results.html
+++ b/capstone-project-1/application/templates/recipes/results.html
@@ -6,15 +6,15 @@
 
 <div class="row">
     {% for recipe in recipes %}
-    <div class="card border-light" style="max-width: 23.5rem;">
+    <div class="card border-light" style="max-width: 20.5rem;">
         <div class="card-body">
-            <div class="position-relative">
+            <div class="position-relative mb-3">
                 <a href="/recipes/{{ recipe['id'] }}" target="_blank" rel="noopener noreferrer">
                     <img class="card-img-top" src="{{ recipe['image'] }}" alt="Recipe image">
                 </a>
                 
                 {% if g.user %}
-                <form method="POST" action="/users/save_recipe/{{ recipe['id'] }}/{{ recipe['title'] }}/{{ page }}" class="position-absolute top-0 start-1">
+                <form method="POST" action="{{ url_for('save_recipe', recipe_api_id=recipe['id'], page='results') }}" class="position-absolute top-0 start-1">
                     <button class="
                     btn 
                     btn-sm 
@@ -24,7 +24,7 @@
                     </button>
                 </form>
                 {% else %}
-                <form method="GET" action="/login" class="position-absolute top-0 start-1">
+                <form method="GET" action="{{ url_for('login') }}" class="position-absolute top-0 start-1">
                     <button class="
                     btn 
                     btn-sm 
@@ -42,10 +42,5 @@
       </div>
       {% endfor %}
 </div>
-
-
-
-
-
 
 {% endblock %}
