--- a/capstone-project-1/application/templates/users/update.html
+++ b/capstone-project-1/application/templates/users/update.html
@@ -16,8 +16,8 @@
           {{ field(placeholder=field.label.text, class="form-control") }}
         {% endfor %}
   
-        <a href="/users/{{ user.id }}" class="btn btn-outline-info btn-lg">Cancel</a>
-        <button class="btn btn-primary btn-lg btn-block">Update!</button>
+        <a href="/users/{{ user.id }}" class="btn btn-outline-info btn-md mt-3">Cancel</a>
+        <button class="btn btn-primary btn-md btn-block mt-3">Update!</button>
       </form>
     </div>
   </div>
