--- a/capstone-project-1/application/templates/recipes/detail.html
+++ b/capstone-project-1/application/templates/recipes/detail.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="card mb-3">
-    <div class="row g-4">
+    <div class="row">
       <div class="col-md-6">
         <img src="{{ recipe_info['image'] }}" class="img-fluid rounded-start" alt="Recipe image" style="width: 100%;">
       </div>
@@ -13,20 +13,21 @@
             <h2 class="card-title">{{ recipe_info["title"] }}</h2>
             <p>Ready in: {{ recipe_info["readyInMinutes"] }} minutes</p>
             <p>Servings: {{ recipe_info["servings"] }}</p>
-            {% if recipe_info['id'] not in api_ids %}
-            <form action="/users/save_recipe/{{ recipe_info['id'] }}/{{ recipe_info['title'] }}/{{ page }}" method="POST">
-                <button class="btn btn-lg btn-outline-primary">
-                    Save it!
-                </button>
+
+            {% if g.user and not g.user.is_saved(recipe) %}
+            <form action="{{ url_for('save_recipe', api_id=recipe_info['id'], page='detail') }}" method="POST">
+                <button class="btn btn-lg btn-primary">
+                    <i class="bi bi-bookmark"></i>
+                  </button>
                 <a href="{{ recipe_info['sourceUrl'] }}" target="_blank" rel="noopener noreferrer" class="btn btn-outline-secondary btn-lg">
                     Go to source
                 </a>
             </form>
             {% else %}
-            <form action="/users/unsave_recipe/{{ recipe_info['id'] }}/{{ page }}" method="POST">
-                <button class="btn btn-lg btn-primary">
-                    Saved
-                </button>
+            <form action="{{ url_for('unsave_recipe', api_id=recipe_info['id'], page='detail') }}" method="POST">
+                <button class="btn btn-lg btn-danger">
+                    <i class="bi bi-trash"></i>
+                  </button>
                 <a href="{{ recipe_info['sourceUrl'] }}" target="_blank" rel="noopener noreferrer" class="btn btn-outline-secondary btn-lg">
                     Go to source
                 </a>
@@ -38,23 +39,24 @@
     </div>
   </div>
 
-
-
 <div class="card mb-3">
     <div class="row">
-        <div class="col-md-6">
-            <h4>You may like these similar recipes!</h4>
-            <ul>
-                {% for recipe in similar_recipes %}
-                    <li><a href="/recipes/{{ recipe['api_id'] }}">{{ recipe['title'] }}"></a></li>
-                {% endfor %}
-            </ul>
-        </div>
         <div class="col-md-6">
             <h4>Ingredients</h4>
             <ul>
                 {% for ingredient in recipe_info["extendedIngredients"] %}
                     <li>{{ ingredient["original"] }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+        <div class="col-md-6">
+            <h4>You may also like these recipes!</h4>
+            <ul>
+                {% for recipe in similar_recipes %}
+                    <li><a href="/recipes/{{ recipe['id'] }}" target="_blank">
+                            {{ recipe['title'] }}">
+                        </a>
+                    </li>
                 {% endfor %}
             </ul>
         </div>
