--- a/capstone-project-1/application/templates/recipes/list.html
+++ b/capstone-project-1/application/templates/recipes/list.html
@@ -8,7 +8,7 @@
     {% for recipe in recipes %}
     <div class="card border-light" style="max-width: 23.5rem;">
         <div class="card-body">
-            <div class="position-relative">
+            <div class="position-relative mb-3">
                 <a href="/recipes/{{ recipe['id'] }}" target="_blank" rel="noopener noreferrer">
                     <img class="card-img-top" src="{{ recipe['image'] }}" alt="Recipe image">
                 </a>
@@ -42,6 +42,8 @@
       </div>
       {% endfor %}
 </div>
+
+<a href="/recipes" class="btn btn-primary btn-md btn-block">Refresh</a>
 
 
 
