--- a/capstone-project-1/application/templates/users/list.html
+++ b/capstone-project-1/application/templates/users/list.html
@@ -4,11 +4,17 @@
 
 <h1>Users</h1>
 
-<div>
+<div class="row">
     {% for user in users %}
-        <div>
-            <a href="/users/{{user.id}}">{{ user.username }}</a>
+    <div class="card border-light mb-3" style="max-width: 20rem;">
+        <div class="card-body">
+            <a href="/users/{{user.id}}" class="stretched-link mb-1 d-flex justify-content-center">
+                <img src="{{ user.image_url }}" alt="{{ user.username }}" class="img-thumbnail" id="profile-pic-user-list">
+            </a>
+            <h4 class="card-title mt-1 mb-0 d-flex justify-content-center">{{ user.username }}</h4>
+            <p class="mb-1 d-flex justify-content-center">Saved recipes | {{ user.recipes | length }}</p>
         </div>
+    </div>
     {% endfor %}
 </div>
 
