--- a/capstone-project-1/application/templates/users/login.html
+++ b/capstone-project-1/application/templates/users/login.html
@@ -15,13 +15,14 @@
           {% for error in field.errors %}
             <span class="text-danger">{{ error }}</span>
           {% endfor %}
-          {{ field(placeholder=field.label.text, class="form-control") }}
+          {{ field.label }}
+          {{ field(class="form-control") }}
         {% endfor %}
 
-        <button class="btn btn-primary btn-block btn-md">Log in</button>
+        <button class="btn btn-primary btn-block btn-md mt-3">Log in</button>
       </form>
 
-      <h5>Don't have an account? <a href="/signup">Sign up now!</a></h5>
+      <h5 class="mt-3">Don't have an account? <a href="/signup">Sign up now!</a></h5>
     </div>
   </div>
 
