--- a/capstone-project-1/application/templates/users/signup.html
+++ b/capstone-project-1/application/templates/users/signup.html
@@ -13,13 +13,13 @@
             <span class="text-danger">{{ error }}</span>
           {% endfor %}
           {{ field.label}}
-          {{ field(placeholder=field.label.text, class="form-control") }}
+          {{ field(class="form-control") }}
         {% endfor %}
   
         <button class="btn btn-primary btn-md btn-block">Sign me up!</button>
       </form>
 
-      <h5>Already have an account? <a href="/login">Log in!</a></h5>
+      <h5 class="mt-3">Already have an account? <a href="/login">Log in!</a></h5>
     </div>
   </div>
 
